try to more closely approximate a hexagonal architecture